Generate static library that includes available static dependencies
* Keep track of what dependencies are only available dynamically
* Rename xxhash file to avoid object collission with OpenSSL

--- a/win32/librdkafka.vcxproj
+++ b/win32/librdkafka.vcxproj
@@ -222,7 +222,7 @@
     <ClCompile Include="..\src\regexp.c" />
     <ClCompile Include="..\src\rdports.c" />
     <ClCompile Include="..\src\rdavl.c" />
-    <ClCompile Include="..\src\xxhash.c" />
+    <ClCompile Include="..\src\rdxxhash.c" />
     <ClCompile Include="..\src\lz4.c" />
     <ClCompile Include="..\src\lz4frame.c" />
     <ClCompile Include="..\src\lz4hc.c" />
