--- a/mklove/Makefile.base
+++ b/mklove/Makefile.base
@@ -114,6 +114,9 @@ else
 	ar -M < $$_tmp || exit 1 ; \
 	rm $$_tmp)
 endif
+	cp $@ $(LIBNAME)-static-dbg.a
+	strip -S $@
+	ranlib $@
 ifneq ($(MKL_DYNAMIC_LIBS),)
 	@printf "$(MKL_RED)WARNING:$(MKL_YELLOW) $@: The following libraries were not available as static libraries and need to be linked dynamically: $(MKL_DYNAMIC_LIBS)$(MKL_CLR_RESET)\n"
 endif
