--- a/mklove/Makefile.base
+++ b/mklove/Makefile.base
@@ -36,6 +36,11 @@ else
 	LDD_PRINT="ldd"
 endif
 
+# DESTDIR must be an absolute path
+ifneq ($(DESTDIR),)
+DESTDIR:=$(abspath $(DESTDIR))
+endif
+
 INSTALL?=		install
 INSTALL_PROGRAM?=	$(INSTALL)
 INSTALL_DATA?=		$(INSTALL) -m 644
@@ -255,6 +260,15 @@ bin-uninstall:
 	rm -f $$DESTDIR$(bindir)/$(BIN)
 	rmdir $$DESTDIR$(bindir) || true
 
+doc-install: $(DOC_FILES)
+	@printf "$(MKL_YELLOW)Installing documentation to $$DESTDIR$(prefix)$(MKL_CLR_RESET)\n"
+	$(INSTALL) -d $$DESTDIR$(docdir)
+	$(INSTALL) $(DOC_FILES) $$DESTDIR$(docdir)
+
+doc-uninstall:
+	@printf "$(MKL_YELLOW)Uninstall documentation from $$DESTDIR$(prefix)$(MKL_CLR_RESET)\n"
+	for _f in $(DOC_FILES) ; do rm -f $$DESTDIR$(docdir)/$$_f ; done
+	rmdir $$DESTDIR$(docdir) || true
 
 generic-clean:
 	rm -f $(OBJS) $(DEPS)
